backends/drm: fix SDR MHC2 profiles with a calibration matrix

The documentation said that
> Target RGB is defined as the encoding used when transmitting colors over the
> display wire; typically BT.709 or BT.2020 primaries.

which seems to be misleading. If BT.709 is used as the wire format in SDR mode,
that leads to wrong results with some MHC2 ICC profiles.

BUG: 522301